--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "scripts": {
     "dev": "vite serve dev",
     "build": "tsup",
+    "build:site": "vite build dev",
     "test": "concurrently bun:test:*",
     "test:client": "vitest",
     "test:ssr": "bun run test:client --mode ssr",
@@ -69,20 +70,22 @@
     "esbuild-plugin-solid": "^0.6.0",
     "eslint": "^8.56.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.47",
-    "prettier": "3.0.0",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "shikiji": "^0.10.2",
-    "solid-js": "^1.8.17",
+    "solid-js": "^1.9.2",
     "solid-marked": "^0.6.3",
     "tailwindcss": "^3.4.14",
-    "tsup": "^8.0.2",
+    "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.6.3",
     "unplugin-solid-marked": "^0.6.3",
-    "vite": "^5.2.11",
+    "vike": "^0.4.199",
+    "vike-solid": "^0.7.6",
+    "vite": "^5.4.9",
     "vite-plugin-solid": "^2.10.2",
     "vitest": "^1.6.0"
   },
