--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "shiki": "^1.22.0",
     "shikiji": "^0.10.2",
     "solid-js": "^1.9.2",
     "solid-marked": "^0.6.3",
@@ -90,7 +91,16 @@
     "vitest": "^1.6.0"
   },
   "keywords": [
-    "solid"
+    "solid",
+    "solid-js",
+    "number-flow",
+    "slot machine",
+    "accessible",
+    "odometer",
+    "animation",
+    "number-format",
+    "number-animation",
+    "animated-number"
   ],
   "engines": {
     "node": ">=18"
