--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
     "solid-js": "^1.6.0"
   },
   "devDependencies": {
+    "@kobalte/core": "^0.13.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "auto-changelog": "^2.5.0",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "esbuild": "^0.21.3",
     "esbuild-plugin-solid": "^0.6.0",
@@ -106,6 +108,6 @@
     "node": ">=18"
   },
   "dependencies": {
-    "number-flow": "^0.3.0"
+    "number-flow": "^0.3.2"
   }
 }
