--- a/package.json
+++ b/package.json
@@ -9,27 +9,18 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.10",
     "@kobalte/core": "^0.13.7",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
     "auto-changelog": "^2.5.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
-    "esbuild": "^0.21.3",
-    "esbuild-plugin-solid": "^0.6.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-solid": "^0.14.5",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.47",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
     "shiki": "^1.22.0",
     "shikiji": "^0.10.2",
     "solid-js": "^1.9.4",
@@ -106,10 +97,9 @@
     "test:client": "vitest",
     "test:ssr": "bun run test:client --mode ssr",
     "prepublishOnly": "bun run build",
-    "format": "prettier --ignore-path .gitignore -w \"src/**/*.{js,ts,json,css,tsx,jsx}\" \"dev/**/*.{js,ts,json,css,tsx,jsx}\"",
-    "lint": "concurrently bun:lint:*",
-    "lint:code": "eslint .",
-    "lint:types": "tsc --noEmit",
+    "check": "tsc --noemit",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
     "update-deps": "bunx npm-check-updates --format group --interactive",
     "ci": "bun run lint && bun run build",
     "publish-ci": "bun run lint && bun run build && changeset publish"
@@ -119,6 +109,6 @@
   "types": "./dist/index.d.ts",
   "typesVersions": {},
   "dependencies": {
-    "number-flow": "^0.5.3"
+    "number-flow": "0.5.3"
   }
 }
