--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@biomejs/biome": "^2.3.8",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.10",
-    "@kobalte/core": "^0.13.7",
+    "@kobalte/core": "^0.13.11",
+    "@mdx-js/mdx": "^3.1.1",
+    "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^20.12.12",
     "auto-changelog": "^2.5.0",
     "autoprefixer": "^10.4.20",
@@ -21,19 +24,18 @@
     "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.47",
-    "shiki": "^1.22.0",
-    "shikiji": "^0.10.2",
     "solid-js": "^1.9.4",
-    "solid-marked": "^0.6.3",
-    "tailwindcss": "^3.4.14",
+    "solid-jsx": "^1.1.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0",
     "typescript": "^5.6.3",
-    "unplugin-solid-marked": "^0.6.3",
     "vike": "^0.4.199",
     "vike-solid": "^0.7.6",
     "vite": "^5.4.9",
     "vite-plugin-solid": "^2.10.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
