--- a/biome.jsonc
+++ b/biome.jsonc
@@ -10,6 +10,7 @@
   "files": {
     "includes": [
       "**",
+      "!_context/**/*",
       "!**/dist/**/*",
       "!**/*.js",
       "!**/*.cjs",
