chore: changes before refactoring to monorepo.

--- a/package.json
+++ b/package.json
@@ -17,24 +17,22 @@
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.17",
-    "@types/node": "^20.12.12",
+    "@types/node": "^24.10.1",
     "auto-changelog": "^2.5.0",
-    "autoprefixer": "^10.4.20",
+    "bagon-hooks": "^0.0.5",
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
-    "postcss": "^8.4.47",
-    "solid-js": "^1.9.4",
+    "solid-js": "^1.9.10",
     "solid-jsx": "^1.1.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0",
     "typescript": "^5.6.3",
-    "vike": "^0.4.199",
-    "vike-metadata-solid": "^1.0.4",
-    "vike-solid": "^0.7.6",
-    "vite": "^5.4.9",
+    "vike": "^0.4.247",
+    "vike-solid": "^0.7.13",
+    "vite": "^7.2.6",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^1.6.0"
@@ -92,10 +90,10 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "vite serve dev",
+    "dev": "vike dev",
     "build": "tsup",
-    "build:site": "vite build dev",
-    "preview:site": "vite preview dev",
+    "build:site": "vike build dev",
+    "preview:site": "vike preview dev",
     "test": "concurrently bun:test:*",
     "test:client": "vitest",
     "test:ssr": "bun run test:client --mode ssr",
