--- a/packages/solid-number-flow/package.json
+++ b/packages/solid-number-flow/package.json
@@ -9,32 +9,14 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "devDependencies": {
-    "@biomejs/biome": "^2.3.8",
-    "@changesets/changelog-github": "^0.5.2",
-    "@changesets/cli": "^2.29.8",
     "@kobalte/core": "^0.13.11",
-    "@mdx-js/mdx": "^3.1.1",
-    "@shikijs/rehype": "^3.19.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
-    "auto-changelog": "^2.5.0",
-    "bagon-hooks": "^0.0.5",
-    "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
     "solid-js": "^1.9.10",
-    "solid-jsx": "^1.1.4",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
     "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0",
     "typescript": "^5.6.3",
-    "vike": "^0.4.247",
-    "vike-solid": "^0.7.13",
-    "vite": "^7.2.6",
-    "vite-plugin-solid": "^2.10.2",
-    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
@@ -110,6 +92,6 @@
   "types": "./dist/index.d.ts",
   "typesVersions": {},
   "dependencies": {
-    "number-flow": "0.5.8"
+    "number-flow": "catalog:"
   }
 }
