--- a/packages/solid-number-flow/package.json
+++ b/packages/solid-number-flow/package.json
@@ -17,6 +17,7 @@
     "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0",
     "typescript": "^5.6.3",
+    "vite-plugin-solid": "^2.11.10",
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
