chore: branch and commit dirty flags for wrangler.

--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -21,6 +21,5 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy apps/site/dist/client --project-name=solid-number-flow
-          branch: ${{ github.ref_name }}
+          command: pages deploy apps/site/dist/client --project-name=solid-number-flow --branch=${{ github.ref_name }} --commit-dirty
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
