--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -1,26 +1,26 @@
-# https://developers.cloudflare.com/pages/how-to/use-direct-upload-with-continuous-integration
-# - Needs a CF Domain (so you can get CLOUDFLARE_ACCOUNT_ID)
+# # https://developers.cloudflare.com/pages/how-to/use-direct-upload-with-continuous-integration
+# # - Needs a CF Domain (so you can get CLOUDFLARE_ACCOUNT_ID)
 
-name: Cloudflare Pages Deployment
+# name: Cloudflare Pages Deployment
 
-on: [push]
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      deployments: write
-    name: Deploy to Cloudflare Pages
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-      - run: bun install --frozen-lockfile
-      - run: bun run build:site
-      - name: Deploy
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy apps/site/dist/client --project-name=solid-number-flow --branch=${{ github.ref_name }} --commit-dirty
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+# on: [push]
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       deployments: write
+#     name: Deploy to Cloudflare Pages
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#       - uses: oven-sh/setup-bun@v2
+#       - run: bun install --frozen-lockfile
+#       - run: bun run build:site
+#       - name: Deploy
+#         uses: cloudflare/wrangler-action@v3
+#         with:
+#           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+#           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+#           command: pages deploy apps/site/dist/client --project-name=solid-number-flow --branch=${{ github.ref_name }} --commit-dirty
+#           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
