--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^4.1.17",
     "typescript": "^5.6.3",
     "vike": "^0.4.247",
+    "vike-metadata-solid": "^1.0.4",
     "vike-solid": "^0.7.13",
     "vite": "^7.2.6",
     "vite-plugin-solid": "^2.10.2",
