--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@kobalte/core": "^0.13.11",
     "@mdx-js/mdx": "^3.1.1",
+    "@mdx-js/rollup": "^3.1.1",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.17",
