chore: fixed publish.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "bun run --filter '*' lint",
     "lint:fix": "bun run --filter '*' lint:fix",
     "check": "bun run --filter '*' check",
-    "publish-ci": "bun run --filter solid-number-flow publish-ci"
+    "publish-ci": "bun run lint && bun run build && changeset publish"
   },
   "workspaces": {
     "packages": [
