--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ name: CI
 on:
   push:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   build:
@@ -18,3 +18,4 @@ jobs:
       - run: bun install --frozen-lockfile
       - run: bun run build
       - run: bun run check
+      - run: bun run lint
