--- a/packages/solid-number-flow/package.json
+++ b/packages/solid-number-flow/package.json
@@ -92,7 +92,6 @@
   "types": "./dist/index.d.ts",
   "typesVersions": {},
   "dependencies": {
-    "number-flow": "catalog:"
-  },
-  "packageManager": "bun@1.3.3"
+    "number-flow": "0.5.8"
+  }
 }
